# python-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  agent.py  code_grapher.py  empty_case_result.json  pyproject.toml  requirements.txt  run_server.py  server.py  smithery.yaml  test_client.py  test_codegrapher.py  test_empty_case.py  test_server.py
examples/: mcp_client_example.py
tests/: tests.py
